platform/policies/kyverno/tests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mundia-policy-test
  labels:
    mundiapolis.io/environment: dev
